# Document-RAG

./: .env.example  .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  reactnode.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py  vectorstore_huggingface.py
